// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basic/Alert Example 1`] = `
<div
  className="!pt-32 !pb-32"
>
  <div
    className="container !pt-32 !pb-40"
  >
    <div
      className="ds-stack-16 scroll-my-40 rounded-lg mt-24 pt-24 pb-32 px-40 bg-yellow-300 md:max-w-[630px]"
      id="default-alert-id"
    >
      <div
        className="ds-stack-4"
      >
        <div
          className="flex flex-row gap-[8px] items-center"
        >
          <svg
            aria-hidden="true"
            data-testid="NotificationsNoneIcon"
            focusable="false"
            height={24}
            role="img"
            style={
              {
                "height": 28,
                "width": 28,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
            />
          </svg>
          <h2
            className="ds-label-01-bold"
            dangerouslySetInnerHTML={
              {
                "__html": "Hinweis",
              }
            }
          />
        </div>
        <div
          className="tracking-[0.16px] leading-[26px]"
        >
          <div
            className="rich-text ds-stack-8 "
            dangerouslySetInnerHTML={
              {
                "__html": "<p class="text-lg">Geben Sie unbedingt den vollständigen Namen einschließlich der in der Bezeichnung enthaltenen Rechtsform, zum Beispiel “ABC GmbH” an.</p>",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Button Ghost 1`] = `
<button
  className="ds-button ds-button-ghost"
>
   
  <span
    className="ds-button-label"
  >
    Button
  </span>
   
</button>
`;

exports[`Storyshots Button/Button Icon Left 1`] = `
<button
  className="ds-button ds-button-with-icon"
>
  <svg
    aria-hidden="true"
    className="ds-button-icon "
    data-testid="HomeOutlinedIcon"
    focusable="false"
    height={24}
    role="img"
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M12 5.69l5 4.5V18h-2v-6H9v6H7v-7.81l5-4.5M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
    />
  </svg>
   
  <span
    className="ds-button-label"
  >
    Button
  </span>
   
</button>
`;

exports[`Storyshots Button/Button Icon Right 1`] = `
<button
  className="ds-button ds-button-with-icon"
>
   
  <span
    className="ds-button-label"
  >
    Button
  </span>
   
  <svg
    aria-hidden="true"
    className="ds-button-icon "
    data-testid="HomeOutlinedIcon"
    focusable="false"
    height={24}
    role="img"
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M12 5.69l5 4.5V18h-2v-6H9v6H7v-7.81l5-4.5M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
    />
  </svg>
</button>
`;

exports[`Storyshots Button/Button Large 1`] = `
<button
  className="ds-button ds-button-large"
>
   
  <span
    className="ds-button-label"
  >
    Button
  </span>
   
</button>
`;

exports[`Storyshots Button/Button Primary 1`] = `
<button
  className="ds-button"
>
   
  <span
    className="ds-button-label"
  >
    Button
  </span>
   
</button>
`;

exports[`Storyshots Button/Button Secondary 1`] = `
<button
  className="ds-button ds-button-secondary"
>
   
  <span
    className="ds-button-label"
  >
    Button
  </span>
   
</button>
`;

exports[`Storyshots Button/Button Small 1`] = `
<button
  className="ds-button ds-button-small"
>
   
  <span
    className="ds-button-label"
  >
    Button
  </span>
   
</button>
`;

exports[`Storyshots Button/Button Tertiary 1`] = `
<button
  className="ds-button ds-button-tertiary"
>
   
  <span
    className="ds-button-label"
  >
    Button
  </span>
   
</button>
`;

exports[`Storyshots Button/ButtonContainer Two Buttons 1`] = `
<div
  className="flex flex-wrap gap-24"
>
  <button
    className="ds-button"
  >
     
    <span
      className="ds-button-label"
    >
      Button 1
    </span>
     
  </button>
  <button
    className="ds-button ds-button-secondary"
  >
     
    <span
      className="ds-button-label"
    >
      Button 2
    </span>
     
  </button>
</div>
`;

exports[`Storyshots Component/Checkbox Default 1`] = `
<div>
  <input
    name="name"
    type="hidden"
    value="off"
  />
  <input
    className="ds-checkbox "
    defaultChecked={false}
    id="name"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    required={false}
    type="checkbox"
    value="value"
  />
  <label
    htmlFor="name"
  >
    <div
      className="rich-text ds-stack-8 "
      dangerouslySetInnerHTML={
        {
          "__html": "<p class="text-lg">label</p>",
        }
      }
    />
  </label>
</div>
`;

exports[`Storyshots Container/Background Background Color 1`] = `
<div
  className="bg-blue-100 !pt-0 !pb-0"
>
  Lorem ipsum
</div>
`;

exports[`Storyshots Container/Background Default 1`] = `
<div
  className="!pt-0 !pb-0"
>
  Lorem ipsum
</div>
`;

exports[`Storyshots Container/Background Paddings 1`] = `
<div
  className="!pt-32 !pb-48"
>
  Lorem ipsum
</div>
`;

exports[`Storyshots Container/Container Background Color 1`] = `
<div
  className="container !pt-40 !pb-48 text-black bg-blue-100"
>
  Lorem ipsum
</div>
`;

exports[`Storyshots Container/Container Custom Paddings 1`] = `
<div
  className="container !pt-8 !pb-16"
>
  Lorem ipsum
</div>
`;

exports[`Storyshots Container/Container Default 1`] = `
<div
  className="container !pt-40 !pb-48"
>
  Lorem ipsum
</div>
`;

exports[`Storyshots Container/Container Overhanging Background 1`] = `
<div
  className="overflow-x-hidden rounded-lg"
  style={
    {
      "marginLeft": "clamp(1rem, 5vw, 3rem)",
      "marginRight": "clamp(1rem, 5vw, 3rem)",
    }
  }
>
  <div
    className="container !pt-40 !pb-48 text-black relative before:content-[''] before:absolute before:inset-y-0 before:-left-32 before:-right-32 before:rounded-lg before:bg-blue-100"
  >
    <div
      className="relative"
    >
      Lorem ipsum
    </div>
  </div>
</div>
`;

exports[`Storyshots Content/Box Default 1`] = `
<div
  className="bg-blue-100 !pt-32 !pb-32"
>
  <div
    className="container !pt-32 !pb-40 text-black bg-yellow-300"
  >
    <div
      className="ds-stack-16 scroll-my-40"
      id="default-box-id"
    >
      <div
        className="ds-stack-8"
      >
        <p
          className="ds-label-02-reg"
          dangerouslySetInnerHTML={
            {
              "__html": "Label text",
            }
          }
        />
        <h2
          className="ds-heading-03-bold"
          dangerouslySetInnerHTML={
            {
              "__html": "Heading text",
            }
          }
        />
        <div>
          <div
            className="rich-text ds-stack-8 "
            dangerouslySetInnerHTML={
              {
                "__html": "<p class="text-lg">Lorem <strong>ipsum</strong></p><ul>
<li>Lorem ipsum</li>
<li>Lorem ipsum</li>
</ul>
",
              }
            }
          />
        </div>
      </div>
      <div
        className="flex flex-wrap gap-24"
      >
        <button
          className="ds-button ds-button-tertiary"
        >
           
          <span
            className="ds-button-label"
          >
            Button 1
          </span>
           
        </button>
        <button
          className="ds-button"
        >
           
          <span
            className="ds-button-label"
          >
            Button 2
          </span>
           
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content/UserFeedback Example 1`] = `
<div
  className="bg-white !pt-32 !pb-40"
>
  <div
    className="overflow-x-hidden rounded-lg"
    style={
      {
        "marginLeft": "clamp(1rem, 5vw, 3rem)",
        "marginRight": "clamp(1rem, 5vw, 3rem)",
      }
    }
  >
    <div
      className="container !pt-32 !pb-32 text-black relative before:content-[''] before:absolute before:inset-y-0 before:-left-32 before:-right-32 before:rounded-lg before:bg-blue-300"
    >
      <div
        className="relative"
      >
        <div
          className="ds-stack-16"
          data-testid="user-feedback-banner"
        >
          <h2
            className="ds-label-01-bold"
            dangerouslySetInnerHTML={
              {
                "__html": "Hat Ihnen der Vorab-Check geholfen?",
              }
            }
          />
          <form
            action="/action/send-rating?url=/&context=&js=false"
            method="post"
            onSubmit={[Function]}
          >
            <div
              className="flex flex-wrap gap-24"
            >
              <button
                className="ds-button ds-button-tertiary ds-button-with-icon"
                name="wasHelpful"
                type="submit"
                value="yes"
              >
                <svg
                  aria-hidden="true"
                  className="ds-button-icon "
                  data-testid="ThumbUpOutlinedIcon"
                  focusable="false"
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z"
                  />
                </svg>
                 
                <span
                  className="ds-button-label"
                >
                  Ja
                </span>
                 
              </button>
              <button
                className="ds-button ds-button-tertiary ds-button-with-icon"
                name="wasHelpful"
                type="submit"
                value="no"
              >
                <svg
                  aria-hidden="true"
                  className="ds-button-icon "
                  data-testid="ThumbDownOutlinedIcon"
                  focusable="false"
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14.73v2c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm0 12-4.34 4.34L12 14H3v-2l3-7h9v10zm4-12h4v12h-4z"
                  />
                </svg>
                 
                <span
                  className="ds-button-label"
                >
                  Nein
                </span>
                 
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Page/Footer Example 1`] = `
<footer
  className="text-base"
>
  <div
    className="container !pt-48 !pb-48"
  >
    <div
      className="flex flex-wrap items-start justify-between gap-y-32"
    >
      <div
        className="flex flex-col flex-col-reverse sm:flex-row gap-y-8 gap-x-16"
      >
        <div>
          <img
            alt=""
            src="https://placehold.co/240x132/png"
            width={120}
          />
        </div>
        <div
          className="ds-stack-8"
        >
          <div>
            <div
              className="rich-text ds-stack-8 "
              dangerouslySetInnerHTML={
                {
                  "__html": "<p class="leading-snug">Lorem ipsum 1 <a class="text-link increase-tap-area whitespace-nowrap" href=/ target="_blank" rel="noopener">Link</a></p>",
                }
              }
            />
          </div>
          <div>
            <div
              className="rich-text ds-stack-8 "
              dangerouslySetInnerHTML={
                {
                  "__html": "<p class="leading-snug">Lorem ipsum 2 <a class="text-link increase-tap-area whitespace-nowrap" href=/ target="_blank" rel="noopener">Link</a></p>",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="flex flex-wrap gap-x-32 gap-y-8"
      >
        <ul
          className="list-none m-0 p-0 ds-stack-8"
        >
          <li
            className="leading-snug"
          >
            <a
              className="text-link increase-tap-area"
              href="https://digitalservice.bund.de"
              rel="noopener"
              target="_blank"
            >
              DigitalService
            </a>
          </li>
          <li
            className="leading-snug"
          >
            <a
              className="text-link increase-tap-area"
              href="/url1"
            >
              Lorem ipsum 1
            </a>
          </li>
          <li
            className="leading-snug"
          >
            <a
              className="text-link increase-tap-area"
              href="/url2"
            >
              Lorem ipsum 2
            </a>
          </li>
        </ul>
        <ul
          className="list-none m-0 p-0 ds-stack-8"
        >
          <li
            className="leading-snug"
          >
            <a
              className="text-link increase-tap-area"
              href="/url3"
            >
              Lorem ipsum 3
            </a>
          </li>
          <li
            className="leading-snug"
          >
            <a
              className="text-link increase-tap-area"
              href="/url4"
            >
              Lorem ipsum 4
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Storyshots Page/List Example 1`] = `
<div
  className="!pt-32 !pb-32"
>
  <div
    className="container !pt-32 !pb-40"
  >
    <div
      className="ds-stack-8 scroll-my-40"
    >
      <h2
        className="ds-heading-02-reg"
        dangerouslySetInnerHTML={
          {
            "__html": "This is a heading text for list",
          }
        }
      />
      <ol
        className="list-none ds-stack-32 ps-0"
      >
        <li
          className="first:pt-0 scroll-my-40"
        >
          <div
            className="flex flex-row items-center justify-center"
          >
            <div
              className="break-words w-full "
            >
              <div
                className="flex flex-row gap-16 items-center"
              >
                <div
                  className="min-w-[40px] w-[40px] h-[40px] pt-[4px] text-center border-2 border-solid border-gray-400 rounded-full"
                >
                  1
                </div>
                <h1
                  className="ds-heading-03-reg"
                  dangerouslySetInnerHTML={
                    {
                      "__html": "Lorem ipsum dolor sit amet",
                    }
                  }
                />
              </div>
              <div
                className="rich-text ds-stack-8 ml-[56px]"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>",
                  }
                }
              />
            </div>
          </div>
        </li>
        <li
          className="first:pt-0 scroll-my-40"
        >
          <div
            className="flex flex-row items-center justify-center"
          >
            <div
              className="break-words w-full "
            >
              <div
                className="flex flex-row gap-16 items-center"
              >
                <div
                  className="min-w-[40px] w-[40px] h-[40px] pt-[4px] text-center border-2 border-solid border-gray-400 rounded-full"
                >
                  2
                </div>
                <h1
                  className="ds-heading-03-reg"
                  dangerouslySetInnerHTML={
                    {
                      "__html": "Lorem ipsum dolor sit amet",
                    }
                  }
                />
              </div>
              <div
                className="rich-text ds-stack-8 ml-[56px]"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>",
                  }
                }
              />
            </div>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;
